--- a/project 3/package.json
+++ b/project 3/package.json
@@ -18,8 +18,11 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.12.1",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
